[GStreamer] Flaky mediarecorder layout test crashes with "'Resource deadlock avoided' during 'pthread_join..." https://bugs.webkit.org/show_bug.cgi?id=295985

Reviewed by Xabier Rodriguez-Calvar.

The GstTranscoder internal thread is triggering crashes when running tests, it's not needed in our
case, so rewrite our MediaRecorder backend removing the dependency on GstTranscoder and use
uritranscodebin directly.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::isTypeSupported):
(WebCore::MediaRecorder::createMediaRecorderPrivate):
* Source/WebCore/platform/GStreamer.cmake:
* Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::refGPtr<GstTranscoder>): Deleted.
(WTF::derefGPtr<GstTranscoder>): Deleted.
(WTF::refGPtr<GstTranscoderSignalAdapter>): Deleted.
(WTF::derefGPtr<GstTranscoderSignalAdapter>): Deleted.
* Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateGStreamer.cpp:
(WebCore::MediaRecorderPrivateBackend::MediaRecorderPrivateBackend):
(WebCore::MediaRecorderPrivateBackend::~MediaRecorderPrivateBackend):
(WebCore::MediaRecorderPrivateBackend::positionUpdated):
(WebCore::MediaRecorderPrivateBackend::startRecording):
(WebCore::MediaRecorderPrivateBackend::stopRecording):
(WebCore::MediaRecorderPrivateBackend::fetchData):
(WebCore::MediaRecorderPrivateBackend::pauseRecording):
(WebCore::MediaRecorderPrivateBackend::resumeRecording):
(WebCore::MediaRecorderPrivateBackend::preparePipeline):
(WebCore::MediaRecorderPrivateBackend::processSample):
(WebCore::MediaRecorderPrivateBackend::notifyEOS):
(WebCore::MediaRecorderPrivateBackend::notifyPosition): Deleted.
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateGStreamer.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
* Source/cmake/GStreamerChecks.cmake:
* Source/cmake/GStreamerDefinitions.cmake:
* Source/cmake/GStreamerDependencies.cmake:

Canonical link: https://commits.webkit.org/297593@main